--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "db-version",
+  "name": "dbversion",
   "version": "1.0.0",
   "description": "database version control",
   "main": "index.js",
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yinrong/node-db-version.git"
+    "url": "git+https://github.com/yinrong/node-dbversion.git"
   },
   "keywords": [
     "liquibase",
@@ -29,7 +29,7 @@
   "author": "yinrong",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/yinrong/node-db-version/issues"
+    "url": "https://github.com/yinrong/node-dbversion/issues"
   },
-  "homepage": "https://github.com/yinrong/node-db-version#readme"
+  "homepage": "https://github.com/yinrong/node-dbversion#readme"
 }
